# ovirt-engine-mcp-server

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  REVIEW.md  SECURITY.md  __main__.py  pyproject.toml  run_tests.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
ovirt_engine_mcp_server/: __init__.py  base_mcp.py  decorators.py  healthcheck.py  mcp_affinity.py  mcp_datacenter.py  mcp_disk_extended.py  mcp_events.py  mcp_extensions.py  mcp_host_extended.py  mcp_quota.py  mcp_rbac.py  mcp_storage_extended.py  mcp_system.py  mcp_template_extended.py  mcp_vm_extended.py  ovirt_mcp.py  search_utils.py  server.py
src/: config.py  errors.py  mcp_affinity.py  mcp_disk_extended.py  mcp_events.py  mcp_extensions.py  mcp_host_extended.py  mcp_quota.py  mcp_rbac.py  mcp_storage_extended.py  mcp_system.py  mcp_template_extended.py  mcp_vm_extended.py  server.py  validation.py
tests/: conftest.py  test_config.py  test_healthcheck.py  test_mcp_affinity.py  test_mcp_datacenter.py  test_mcp_disk_extended.py  test_mcp_events.py  test_mcp_extensions.py  test_mcp_host_extended.py  test_mcp_rbac.py  test_mcp_storage_extended.py  test_ovirt_mcp.py  test_search_utils.py  test_server.py
