[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ovirt-engine-mcp-server"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for oVirt/RHV virtualization management"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Joey Ma", email = "majunjie@apache.org"},
]
keywords = ["ovirt", "mcp", "rhv", "virtualization", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "mcp>=1.0.0",
    "ovirtsdk4>=4.6.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "colorlog>=6.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
]

[project.scripts]
ovirt-engine-mcp = "ovirt_engine_mcp_server.server:main"

[project.urls]
Homepage = "https://github.com/imjoey/ovirt-engine-mcp-server"
Repository = "https://github.com/imjoey/ovirt-engine-mcp-server"
Issues = "https://github.com/imjoey/ovirt-engine-mcp-server/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ovirt_engine_mcp_server*"]

[tool.setuptools.package-dir]
"" = "."

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

markers = [
    "integration: marks tests as integration tests (require real oVirt connection)",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
